# docs/swagger.json
@@ -414,6 +414,63 @@
                 }
             }
         },
+        "/api/stories/filter": {
+            "get": {
+                "description": "get story by category",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stories"
+                ],
+                "summary": "Get Story By Category",
+                "operationId": "get-story-by-category",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Category ID",
+                        "name": "category_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dtos.Post"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponse"
+                        }
+                    },
+                    "default": {
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/http.errorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/api/stories/my": {
             "get": {
                 "security": [
@@ -1093,10 +1150,14 @@
         "dtos.AddPostInput": {
             "type": "object",
             "required": [
+                "category_id",
                 "content",
                 "title"
             ],
             "properties": {
+                "category_id": {
+                    "type": "integer"
+                },
                 "content": {
                     "type": "string"
                 },
@@ -1107,8 +1168,17 @@
         },
         "dtos.Post": {
             "type": "object",
+            "required": [
+                "category_id"
+            ],
             "properties": {
                 "author": {
+                    "type": "string"
+                },
+                "category_id": {
+                    "type": "integer"
+                },
+                "category_name": {
                     "type": "string"
                 },
                 "comments": {
